# Vision_chatbot

./: .gitignore  OpenGVLab-InternVL3.py  README.md  main.py  mistral_small-3.py  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/104373439793671490/: meta.yaml
mlruns/104373439793671490/4939b11057be4370870cf93d00ca0456/: meta.yaml
mlruns/104373439793671490/4939b11057be4370870cf93d00ca0456/artifacts/: response.txt
mlruns/104373439793671490/4939b11057be4370870cf93d00ca0456/metrics/: response_length
mlruns/104373439793671490/4939b11057be4370870cf93d00ca0456/params/: image_path  model  prompt
mlruns/104373439793671490/4939b11057be4370870cf93d00ca0456/tags/: mlflow.note.content  mlflow.runName  mlflow.source.git.commit
mlruns/104373439793671490/c77e9bc15e2a4bb7bad123e65fb8dbab/: meta.yaml
mlruns/104373439793671490/c77e9bc15e2a4bb7bad123e65fb8dbab/artifacts/: response.txt
mlruns/104373439793671490/c77e9bc15e2a4bb7bad123e65fb8dbab/metrics/: response_length
mlruns/104373439793671490/c77e9bc15e2a4bb7bad123e65fb8dbab/params/: model
mlruns/104373439793671490/c77e9bc15e2a4bb7bad123e65fb8dbab/tags/: mlflow.note.content  mlflow.runName  mlflow.source.name  task
models/: Kimi-VL-A3B.py  OpenGVLab-InternVL3.py  mistral_small-3.py
