[project]
name = "openrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "load-dotenv>=0.1.0",
    "mlflow>=2.22.1",
    "openai>=1.84.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
